--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   author       = {Juan Cuadrado and Elizabeth Martinez and Anderson Morillo and Daniel Peña and Kevin Sossa and Juan Carlos Martinez-Santos and Edwin Puertas},
   title        = {UTB-NLP at SemEval-2023 Task 3: Weirdness, Lexical Features for Detecting Categorical Framings, and Persuasion in Online News},
   journal      = {Proc. of SemEval},
+  abstract     = {Nowadays, persuasive messages are more and more frequent in social networks, which generates great concern in several communities, given that persuasion seeks to guide others towards the adoption of ideas, attitudes or actions that they consider to be beneficial to themselves. The efficient detection of news genre categories, detection of framing and detection of persuasion techniques requires several scientific disciplines, such as computational linguistics and sociology. Here we illustrate how we use lexical features given a news article, determine whether it is an opinion piece, aims to report factual news, or is satire. This paper presents a novel strategy for news based on Lexical Weirdness. The results are part of our participation in subtasks 1 and 2 in SemEval 2023 Task 3.},
   year         = {2023},
   doi          = {10.18653/V1/2023.SEMEVAL-1.214},
   html         = {https://aclanthology.org/2023.semeval-1.214},
@@ -21,6 +22,7 @@
   author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Automated Depression Detection in Text Data: Leveraging Lexical Features, Phonesthemes Embedding, and RoBERTa Transformer Model},
   year         = {2023},
+  abstract     = {Depression is a prevalent mental disorder characterized by persistent sadness, lack of interest, and diminished pleasure. Detecting depression is crucial for timely intervention and support. In this paper, we address the task of depression detection in text data, focusing on binary classification and regression. We present our approach, leveraging a dataset comprising labeled messages from Telegram groups related to mental disorders. We begin by exploring the existing literature on depression detection, highlighting the challenges faced and the methods employed. Our approach involves data pre-processing, lexical feature extraction, phonesthemes embedding, and using the RoBERTa transformer model. We achieved promising results in the training phase through rigorous experimentation and model refinement. However, we encountered challenges upon evaluating our approach in the MentalRiskEs evaluation. We identified areas for improvement, particularly in latency and speed of detection for real-time monitoring of depression-related risks. This research contributes to the ongoing efforts in automating depression detection and provides insights into the potential of text analysis techniques for mental health assessment. We remain committed to further enhancing our methodology and advancing the field to improve the well-being of individuals affected by depression, emphasizing the importance of early detection systems that are not only accurate but also responsive. Future work will explore multimodal inputs, real-time deployment strategies, and cross-linguistic generalization to increase the applicability and robustness of our system in diverse social and linguistic contexts.},
   html         = {https://www.researchgate.net/publication/374724906}
 }
 
@@ -38,7 +40,9 @@
   bibtex_show  = {true},
   author       = {Duván A. Marrugo and Juan Carlos Martinez-Santos and Edwin Puertas},
   title        = {Natural Language Contents Evaluation System for Multi-class News Categorization Using Machine Learning and Transformers},
-  journal      = {Commun. Comput. Inf. Sci.},
+  journal      = {Applied Computer Sciences in Engineering},
+  pages        = {115--126},
+  abstract     = {The exponential growth of digital documents has come with rapid progress in text classification techniques in recent years. This paper provides text classification models, which analyze various steps of news classification, where some algorithmic approaches for machine learning, such as Logistic Regression, Support Vector Machine, and Random Forest, are implemented. In turn, the uses of Transformers as classification models for the solution of the same problem, proposing BERT and DistilBERT as possible solutions to compare for the automatic classification of news containing articles belonging to four categories (World, Sports, Business, and Science/Technology). We obtained the highest accuracy on the machine learning side, with 88% using Support Vector Machine with Word2Vec. However, using Transformer DistilBERT, we got an efficient model in terms of performance and 91.7% accuracy for classifying news.},
   year         = {2023},
   doi          = {10.1007/978-3-031-46739-4_11},
   html         = {https://link.springer.com/chapter/10.1007/978-3-031-46739-4_11}
@@ -50,6 +54,7 @@
   author       = {Juan Cuadrado and Elizabeth Martinez and Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Long-Term Effects of Degradation on Photovoltaic System Return on Investment},
   journal      = {IEEE Latin America Transactions},
+  abstract     = {The adoption of photovoltaic (PV) systems has increased significantly in recent years, driven by the demand for off-grid and on-grid residential and commercial applications. However, the high initial investment required for PV installations has limited their widespread adoption. Governments and marketing enterprises have implemented different strategies to promote PV systems to overcome this barrier, focusing on the return on investment (ROI) concept. However, the conventional approach uses limited economic factors to calculate the ROI. It fails to consider the impact of external factors, such as system degradation, which can vary between systems. To address this issue, we propose a new methodology to estimate the ROI of a photovoltaic system with greater accuracy. Our approach incorporates system-predicted degradation, calculated using historical meteorological data and prediction techniques. We applied this methodology to a photovoltaic system installed at the Universidad Tecnológica de Bolívar (UTB) in Cartagena and evaluated it against five different approaches. The results show that our proposed method offers a more accurate and reliable estimation of the ROI of a photovoltaic system, considering a broader range of factors. Overall, our work contributes to advancing the understanding of photovoltaic system ROI calculation and promotes using sustainable energy sources. By providing a more precise estimation of the ROI of a photovoltaic system, our methodology can help potential investors make more informed decisions and promote the adoption of clean energy},
   year         = {2023},
   doi          = {10.1109/TLA.2023.10305232},
   html         = {https://ieeexplore.ieee.org/document/10305232}
@@ -61,6 +66,7 @@
   author       = {Edwin Puertas and Jenifer Vasquez and Juan Carlos Martinez-Santos},
   title        = {RealCheck: A Web Application for Fake News Detection Using Natural Language Processing},
   booktitle    = {1st IEEE Colombian Caribbean Conference (C3)},
+  abstract     = {The spread of misinformation and disinformation online represents a significant challenge in today’s society. This paper proposes implementing a news verifier web application that uses artificial intelligence techniques to determine the veracity of news provided by users. The system consists of three stages: user input validation, selection of relevant sources, and information analysis. We trained a logistic regression model with an in-house dataset of 2000 sentences for input validation. We utilized cosine similarity and FastText for source selection. Finally, a large language model analyzes the context and coherence of selected articles to determine veracity. The transparent presentation of results fosters media literacy. While some implementation details may differ due to time constraints, this paper provides the overall methodology and architecture of the system.},
   year         = {2023},
   publisher    = {IEEE},
   doi          = {10.1109/C358072.2023.10436244},
@@ -73,6 +79,7 @@
   author       = {Elizabeth Martinez and Juan Cuadrado and Juan Carlos Martinez-Santos and Edwin Puertas},
   title        = {Detection of Online Sexism Using Lexical Features and Transformer},
   booktitle    = {1st IEEE Colombian Caribbean Conference (C3)},
+  abstract     = {Social networks are now integral to modern life, offering instant global communication. Unfortunately, this ease of connectivity has also led to the misuse of freedom, with many social media users expressing inappropriate and often sexist comments. In response, the field of natural language processing has actively sought solutions to detect and counteract such content. Our study builds upon our previous work presented during the SemEval 2023 competition. Initial results, achieved using only lexical features, prompted a thorough reevaluation. Recognizing the potential of advanced techniques, we embarked on a comprehensive exploration to enhance our approach. Leveraging our experience, we focused on a feature union strategy. By seamlessly combining the ’twitter-roberta-base-sentiment-latest’ transformer model with established lexical features, we developed a refined methodology that transcends the limitations of individual elements. This approach improved performance and demonstrated the synergistic potential of merging these distinct features. Our improved method revealed significant enhancements, underscoring the effectiveness of our methodology in boosting detection capabilities. It led to a notable improvement of approximately 20% in binary classification accuracy, a substantial leap from our previous results. The strategic blend of linguistic and transformer-based features emerged as the driving force behind this significant advancement.},
   year         = {2023},
   publisher    = {IEEE},
   doi          = {10.1109/C358072.2023.10436298},
@@ -85,7 +92,9 @@
   author       = {Juan Pajaro and Edwin Puertas and David Villate and Laura Estrada and Laura Tinjaca},
   title        = {VerbaNexAI at MEDIQA-CORR: Efficacy of GRU with BioWordVec and ClinicalBERT in Error Correction in Clinical Notes},
   journal      = {Proc. of ClinicalNLP},
+  abstract     = {The automatic identification of medical errors in clinical notes is crucial for improving the quality of healthcare services.LLMs emerge as a powerful artificial intelligence tool for automating this task. However, LLMs present vulnerabilities, high costs, and sometimes a lack of transparency. This article addresses the detection of medical errors through the fine-tuning approach, conducting a comprehensive comparison between various models and exploring in depth the components of the machine learning pipeline. The results obtained with the fine-tuned ClinicalBert and Gated recurrent units (Gru) models show an accuracy of 0.56 and 0.55, respectively. This approach not only mitigates the problems associated with the use of LLMs but also demonstrates how exhaustive iteration in critical phases of the pipeline, especially in feature selection, can facilitate the automation of clinical record analysis.},
   year         = {2024},
+  pages        = {461–-469},
   doi          = {10.18653/V1/2024.CLINICALNLP-1.46},
   html         = {https://aclanthology.org/2024.clinicalnlp-1.46}
 }
@@ -95,6 +104,7 @@
   bibtex_show  = {true},
   author       = {Mauro A. Gonzalez-Sierra and Rafael Arnedo and Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Feature Selection for Forecasting of Energy Spot Price in the Colombian Market},
+  abstract     = {Enhancing the forecasting accuracy of energy spot prices is vital for decision-making in energy trading. This study evaluates various feature selection methods and regression models to predict energy prices in Colombia. We compare Principal Components Analysis, Pearson Correlation Coefficients, Mutual Information, and Least Absolute Shrinkage methods with Ran-dom Forest, Extra Gradient boost, and CatBoost models. Mutual Information is the most compelling feature selection method, improving prediction accuracy notably. It identifies features such as reserves, month, and Ocean Nino Index in the study. The Random Forest model with Mutual Information-based selection achieved an R2 value of 95%. The research emphasizes the enhanced model accuracy in spot energy price prediction using Mutual Information-based feature selection. Future research should focus on cross-validation techniques and the impact of temporal data for further improvements.},
   booktitle    = {IEEE ANDESCON},
   year         = {2024},
   publisher    = {IEEE},
@@ -105,8 +115,9 @@
 @misc{DIPROMATS2024,
   abbr         = {ResearchGate},
   bibtex_show  = {true},
-  author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
+  author       = {Jose Cuadrado, Elizabeth Martinez, Juan Cuadrado, Juan Carlos Martinez-Santos and Edwin Puertas},
   title        = {VerbaNex AI at DIPROMATS 2024: Enhancing Propaganda Detection in Diplomatic Tweets with Fine-Tuned BERT and Integrated NLP Techniques},
+  abstract     = {This paper outlines the methodology used by VerbaNexAI for the DIPROMATS 2024 competition, part of the Iberian Languages Evaluation Forum (IberLEF). The challenge involves detecting propaganda and strategic narratives in tweets from diplomats of the USA, Europe, Russia, and China, in English and Spanish. Task 1, focuses on the identification and characterization of propaganda, we implemented four methodologies. Our pre-processing steps include text normalization, removal of URLs, retweets, user mentions, stop words, and lemmatization. Feature extraction was performed using TF-IDF vectorization, transformer fine-tuning, combined feature extraction from TF-IDF and transformers, and a hashtag-specific feature extraction. Regularization techniques such as class balancing and k-fold cross-validation were applied to ensure robust model performance. Various classifiers, including Random Forest, Support Vector Classifier, Naive Bayes, and Logistic Regression, were evaluated to determine the most effective models. Our approach aims to enhance the detection of propaganda in diplomatic tweets, contributing to a broader understanding of how propaganda operates in social media.},
   year         = {2024},
   html         = {https://www.researchgate.net/publication/383876929}
 }
@@ -114,9 +125,11 @@
 @misc{HOMOMEX2024,
   abbr         = {ResearchGate},
   bibtex_show  = {true},
-  author       = {Edwin Puertas and Juan Carlos Martinez-Santos},
+  author       = {Roger David Gonzalez-Henao, Duvan Andres Marrugo-Tobon, Juan Carlos Martinez-Santos, and Edwin Puertas},
   title        = {VerbaNexAI Lab at HOMO-MEX 2024: Multiclass and Multilabel Detection of LGBTQ+ Phobic Content Using Transformers},
-  year         = {2024},
+  year         = {2024
+  abstract     = {In natural language processing, accurate categorization of tweets, including detecting hate speech, is crucial for efficient information organization and analysis. This paper presents a Natural Language Contents Evaluation System designed explicitly for multi-class tweet categorization, focusing on hate speech detection. Our system leverages the power of Transformers, namely BERT, to enhance classification accuracy and efficiency. We capture essential tweet information using feature extraction techniques, enabling practical analysis and categorization. To address imbalanced corpora, we employ techniques that ensure fair representation of different tweet categories.
+                 Our system demonstrated impressive performance in the HOMO-Mex 2024 competition: first place in Track 1 with a 91% F1 score, third place in Track 2 with a 93% F1 score, and second place in Track 3 with a 56% F1 score. These results highlight the robustness and generalizability of our trained models for hate speech detection. This system contributes to advancing automated tweet categorization, providing a reliable and efficient solution for organizing and analyzing diverse tweet datasets. Future work will explore further enhancements in model interpretability, real-time classification capabilities, and adaptability to evolving linguistic patterns to maintain high performance across different social contexts and platforms.},
   html         = {https://www.researchgate.net/publication/383877018}
 }
 
@@ -125,8 +138,9 @@
   bibtex_show  = {true},
   author       = {Danileth Almanza-Gonzalez and Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Unveiling Tourist Profiles in the Department of Sucre: A Text Analysis Approach},
-  booktitle    = {Commun. Comput. Inf. Sci.},
+  booktitle    = {Advances in Computing},
   year         = {2024},
+  abstract     = {Tourism has emerged as an industry powered by technological advancements that enrich tourists’ experiences. Digital interaction has transformed how tourists explore, share, and select destinations and activities. Platforms such as TripAdvisor and FourSquare stand out as sources of information and analysis, enabling understanding of tourist behavior and adapting offerings to tourists’ preferences. In this context, we analyzed comments extracted from TripAdvisor and FourSquare, applying Latent Semantic Analysis (LSA) techniques. Based on these data, segmentation of tourist types was implemented to gain a deep and detailed understanding of tourist behavior in the Sucre department, thus contributing to informed decision-making to enhance the quality of the tourism offer and experience.},
   publisher    = {Springer},
   doi          = {10.1007/978-3-031-75233-9_3},
   html         = {https://link.springer.com/chapter/10.1007/978-3-031-75233-9_3}
@@ -137,8 +151,9 @@
   bibtex_show  = {true},
   author       = {Andrea Menco Tovar and Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Implementation of Convolutional Neural Networks for Automated Disease Detection in Cucumber Crops},
-  booktitle    = {Commun. Comput. Inf. Sci.},
+  booktitle    = {Advances in Computing},
   year         = {2024},
+  abstract     = {This study presents an automated system for detecting diseases in cucumber crops using Convolutional Neural Networks (CNN). Given the importance of agriculture and the challenges crops face due to pests and diseases, a vision-based approach is proposed to improve the early and accurate identification of diseases in cucumbers. Three CNN architectures were evaluated: Xception, VGG16, and ResNet50, using a balanced dataset of images of healthy and diseased cucumber leaves. The Xception model showed the best performance with an accuracy of 93.45% and a loss of 0.4842, surpassing the other models. Image preprocessing and transfer learning were key to achieving these results. Despite the good results, challenges were identified in accurately classifying some images, suggesting areas for future improvement. This system provides a valuable tool for farmers, enabling early detection and rapid decision-making to control diseases, which can significantly improve crop quality and yield. Future research could integrate this system with mobile technologies and drones for more efficient real-time monitoring.},
   publisher    = {Springer},
   doi          = {10.1007/978-3-031-75233-9_12},
   html         = {https://link.springer.com/chapter/10.1007/978-3-031-75233-9_12}
@@ -149,8 +164,9 @@
   bibtex_show  = {true},
   author       = {Melissa Moreno-Novoa and Edwin Puertas and Juan Carlos Martinez-Santos},
   title        = {Enhancing Vocational Guidance with Machine Learning: Predicting STEM Career Viability for High School Students},
-  booktitle    = {Commun. Comput. Inf. Sci.},
+  booktitle    = {Advances in Computing},
   year         = {2024},
+  abstract     = {The decision to pursue a professional career is paramount for young people. Yet, the absence of adequate guidance can result in misguided choices. In Colombia, most high school students need a clearer understanding of their future career aspirations. This lack of clarity often leads to a significant dropout rate at the university level. Furthermore, students entering university tend to consider something other than STEM careers, which could result in a mismatch between their labor skills and future economic needs. To address this issue, we apply machine learning, data mining, and utilizing information from tests such as Saber 11 and the Gardner test, which aim to predict viability within their capabilities oriented toward STEM careers. Applying machine learning models such as XGBoost, Stacking, Random Forest, Decision Tree, and KNN has shown promising results, albeit with challenges in balancing precision and recall for different classes. These advancements represent an opportunity to enhance vocational guidance and increase the likelihood of success and job satisfaction among young people.},
   publisher    = {Springer},
   doi          = {10.1007/978-3-031-75236-0_12},
   html         = {https://link.springer.com/chapter/10.1007/978-3-031-75236-0_12}
@@ -159,10 +175,11 @@
 @inproceedings{Muvdi2025,
   abbr         = {LNCS},
   bibtex_show  = {true},
-  author       = {David Muvdi and Mateo R. Hernández and Eiker J. Cifuentes and Andrea Di Somma and Francesco Chiappone and Vicenzo Di Maro and Juan Carlos Martínez-Santos and Edwin Puertas},
+  author       = {David Muvdi, Mateo R. Hernández, Eiker J. Cifuentes, Andrea Di Somma, Francesco Chiappone, Vicenzo Di Maro, Juan Carlos Martínez-Santos & Edwin Puertas },
   title        = {Mapping Motion: A Cognitive Approach to Dyspraxia Multimodal Analysis},
-  booktitle    = {Lect. Notes Comput. Sci.},
+  booktitle    = {Advances in Artificial Intelligence – IBERAMIA 2024},
   year         = {2025},
+  abstract     = {This research paper presents a novel software tool designed to revolutionize speech therapy for individuals with Childhood Apraxia of Speech (CAS), also known as Developmental Verbal Dyspraxia. The software offers a comprehensive multi-modal analysis approach, utilizing video, audio, and speech-to-text data to extract valuable insights into articulation patterns, head pose, audio characteristics, and word usage. This information empowers Speech-Language Pathologists (SLPs) with data-driven tools for a more precise assessment and development of personalized treatment plans. While the current study employs data from just one healthy subject to evaluate the software’s overall accuracy and data coherence, the functionalities are promising to improve therapy effectiveness for individuals with CAS, giving space for further experiments, analysis and validations with experts. The paper explores how the software’s capabilities can complement existing therapies like PROMPT, Touch-Cue Method, and Melodic Intonation Therapy, based on a cognitive perspective, ultimately aiming to transform the field of speech-language pathology and enhance the lives of those affected by speech disorders.},
   publisher    = {Springer},
   doi          = {10.1007/978-3-031-80366-6_2},
   html         = {https://link.springer.com/chapter/10.1007/978-3-031-80366-6_2}
@@ -174,6 +191,7 @@
   author       = {Anderson Morillo and Daniel Peña and Juan Carlos Martinez Santos and Edwin Puertas},
   title        = {VerbaNexAI Lab at SemEval-2024 Task 1: A Multilayer Artificial Intelligence Model for Semantic Relationship Detection},
   journal      = {Proc. of SemEval},
+  abstract     = {This paper presents an artificial intelligence model designed to detect semantic relationships in natural language, addressing the challenges of SemEval 2024 Task 1. Our goal is to advance machine understanding of the subtleties of human language through semantic analysis. Using a novel combination of convolutional neural networks (CNNs), long short-term memory (LSTM) networks, and an attention mechanism, our model is trained on the STR-2022 dataset. This approach enhances its ability to detect semantic nuances in different texts. The model achieved an 81.92% effectiveness rate and ranked 24th in SemEval 2024 Task 1. These results demonstrate its robustness and adaptability in detecting semantic relationships and validate its performance in diverse linguistic contexts. Our work contributes to natural language processing by providing insights into semantic textual relatedness. It sets a benchmark for future research and promises to inspire innovations that could transform digital language processing and interaction.},
   year         = {2024},
   doi          = {10.18653/V1/2024.SEMEVAL-1.194},
   html         = {https://aclanthology.org/2024.semeval-1.194}
@@ -185,6 +203,7 @@
   author       = {Santiago Garcia and Elizabeth Martinez and Juan Cuadrado and Juan Martinez-santos and Edwin Puertas},
   title        = {VerbaNexAI Lab at SemEval-2024 Task 10: Emotion recognition and reasoning in mixed-coded conversations based on an NRC VAD approach},
   journal      = {Proc. of SemEval},
+  abstract     = {This study introduces an innovative approach to emotion recognition and reasoning about emotional shifts in code-mixed conversations, leveraging the NRC VAD Lexicon and computational models such as Transformer and GRU. Our methodology systematically identifies and categorizes emotional triggers, employing Emotion Flip Reasoning (EFR) and Emotion Recognition in Conversation (ERC). Through experiments with the MELD and MaSaC datasets, we demonstrate the model’s precision in accurately identifying emotional shift triggers and classifying emotions, evidenced by a significant improvement in accuracy as shown by an increase in the F1 score when including VAD analysis. These results underscore the importance of incorporating complex emotional dimensions into conversation analysis, paving new pathways for understanding emotional dynamics in code-mixed texts.},
   year         = {2024},
   doi          = {10.18653/V1/2024.SEMEVAL-1.192},
   html         = {https://aclanthology.org/2024.semeval-1.192}
@@ -197,6 +216,7 @@
   title        = {VerbaNexAI Lab at SemEval-2024 Task 3: Deciphering emotional causality in conversations using multimodal analysis approach},
   journal      = {Proc. of SemEval},
   year         = {2024},
+  abstract     = {This study delineates our participation in the SemEval-2024 Task 3: Multimodal Emotion Cause Analysis in Conversations, focusing on developing and applying an innovative methodology for emotion detection and cause analysis in conversational contexts. Leveraging logistic regression, we analyzed conversational utterances to identify emotions per utterance. Subsequently, we employed a dependency analysis pipeline, utilizing SpaCy to extract significant chunk features, including object, subject, adjectival modifiers, and adverbial clause modifiers. These features were analyzed within a graph-like framework, conceptualizing the dependency relationships as edges connecting emotional causes (tails) to their corresponding emotions (heads). Despite the novelty of our approach, the preliminary results were unexpectedly humbling, with a consistent score of 0.0 across all evaluated metrics. This paper presents our methodology, the challenges encountered, and an analysis of the potential factors contributing to these outcomes, offering insights into the complexities of emotion-cause analysis in multimodal conversational data.},
   doi          = {10.18653/V1/2024.SEMEVAL-1.193},
   html         = {https://aclanthology.org/2024.semeval-1.193}
 }
