--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -127,9 +127,7 @@
   bibtex_show  = {true},
   author       = {Roger David Gonzalez-Henao, Duvan Andres Marrugo-Tobon, Juan Carlos Martinez-Santos, and Edwin Puertas},
   title        = {VerbaNexAI Lab at HOMO-MEX 2024: Multiclass and Multilabel Detection of LGBTQ+ Phobic Content Using Transformers},
-  year         = {2024
-  abstract     = {In natural language processing, accurate categorization of tweets, including detecting hate speech, is crucial for efficient information organization and analysis. This paper presents a Natural Language Contents Evaluation System designed explicitly for multi-class tweet categorization, focusing on hate speech detection. Our system leverages the power of Transformers, namely BERT, to enhance classification accuracy and efficiency. We capture essential tweet information using feature extraction techniques, enabling practical analysis and categorization. To address imbalanced corpora, we employ techniques that ensure fair representation of different tweet categories.
-                 Our system demonstrated impressive performance in the HOMO-Mex 2024 competition: first place in Track 1 with a 91% F1 score, third place in Track 2 with a 93% F1 score, and second place in Track 3 with a 56% F1 score. These results highlight the robustness and generalizability of our trained models for hate speech detection. This system contributes to advancing automated tweet categorization, providing a reliable and efficient solution for organizing and analyzing diverse tweet datasets. Future work will explore further enhancements in model interpretability, real-time classification capabilities, and adaptability to evolving linguistic patterns to maintain high performance across different social contexts and platforms.},
+  year         = {2024},
   html         = {https://www.researchgate.net/publication/383877018}
 }
 
